--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>I am Chinmaya</h1>
         </div>
         <div class="r-img">
-            <img src="images/myphoto-1.jpg">
+            <img src="images/myphoto-1.jpg" alt="Chinmaya Image1">
         </div>
         <div class="watermark1">
             <span>I</span>
@@ -52,7 +52,7 @@
         </div>
         <div class="circle2"></div>
         <div>
-            <img src="images/myphoto-1.jpg" id="ab-img">
+            <img src="images/myphoto-1.jpg" id="ab-img" alt="Chinmaya Image2">
         
         </div>
     </section>
